--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "swr": "^2.2.4"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.29",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
