--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.3",
     "@mui/styled-engine-sc": "^6.0.0-alpha.11",
     "axios": "^1.6.5",
+    "date-fns": "^3.2.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
