--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.3",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.11",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.12",
+    "@mui/system": "^5.15.5",
     "axios": "^1.6.5",
     "next": "14.0.4",
     "react": "^18",
