--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.12",
     "@mui/system": "^5.15.5",
     "axios": "^1.6.5",
+    "cookies-next": "^4.1.0",
     "date-fns": "^3.3.0",
     "next": "^14.0.4",
     "react": "^18",
