--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.6.7",
     "cookies-next": "^4.1.0",
     "date-fns": "^3.3.0",
+    "google-auth-library": "^9.6.0",
+    "googleapis": "^131.0.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18",
@@ -26,6 +28,7 @@
     "react-player": "^2.14.1",
     "react-router-dom": "^6.21.3",
     "react-slick": "^0.29.0",
+    "simple-oauth2": "^5.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.5",
